Fix lab alignment on lab list page

--- a/tjhsst/static/labs.css
+++ b/tjhsst/static/labs.css
@@ -3,6 +3,11 @@
     background-size: cover;
 }
 
+.card-columns.lab-container {
+    text-align: center;
+    margin-top: 0px;
+}
+
 .lab-box {
     padding: 0px;
     border: none;
@@ -13,6 +18,7 @@
     padding: 10px;
     border: 1px solid #E0E0E0;
     box-shadow: 1px 1px rgba(8, 103, 136, 1);
+    text-align: left;
 }
 
 
